# Pong

./: .clang-format  CMakeLists.txt  README.md
include/: ball.h  game.h  paddle.h  utils.h
src/: ball.cpp  game.cpp  main.cpp  paddle.cpp
